# -----

./: .gitignore  README.md  flake.nix  musettir.desktop  pyproject.toml  result-bin
src/face_gui/: app.py  cli.py  config.py  window.py
src/musettir/: app.py  cli.py  config.py  image_canvas.py  window.py
