[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musettir"
version = "0.1.0"
description = "Live face detection GUI using PyQt5 and OpenCV"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "numpy>=1.24",
  "PyQt5>=5.15",
  "mediapipe>=0.10",
  "PyMuPDF>=1.23",
]

[project.optional-dependencies]
opencv = ["opencv-python>=4.8"]

[project.scripts]
musettir = "musettir.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["musettir*"]
